@@ -18,6 +18,7 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InterruptedIOException;
+import java.nio.charset.Charset;
 import java.sql.SQLException;
 import java.sql.SQLWarning;
 import java.util.*;
@@ -38,23 +39,23 @@ import com.splicemachine.replication.HBaseReplicationPlatformUtil;
 import com.splicemachine.si.constants.SIConstants;
 import com.splicemachine.storage.ClientPartition;
 import com.splicemachine.utils.SpliceLogUtils;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import org.apache.hadoop.hbase.client.*;
 import org.apache.hadoop.hbase.exceptions.ConnectionClosingException;
 import org.apache.hadoop.hbase.exceptions.MergeRegionException;
 import org.apache.hadoop.hbase.exceptions.RegionOpeningException;
 import org.apache.hadoop.hbase.ipc.HBaseRpcController;
-import org.apache.hadoop.hbase.protobuf.ProtobufUtil;
-import org.apache.hadoop.hbase.protobuf.generated.ClientProtos;
+import org.apache.hadoop.hbase.shaded.protobuf.ProtobufUtil;
+import org.apache.hadoop.hbase.shaded.protobuf.generated.ClientProtos;
 import org.apache.hadoop.hbase.security.access.AccessControlClient;
 import org.apache.hadoop.hbase.security.access.Permission;
 import org.apache.hadoop.hbase.security.access.UserPermission;
 import org.apache.hadoop.hbase.shaded.protobuf.generated.AdminProtos;
-import org.apache.hadoop.hbase.shaded.protobuf.generated.ReplicationProtos;
 import org.apache.hadoop.hbase.util.HBaseFsckRepair;
 import org.apache.log4j.Logger;
-import org.spark_project.guava.base.Function;
+import splice.com.google.common.base.Function;
 import org.apache.hadoop.hbase.*;
-import org.spark_project.guava.collect.Collections2;
+import splice.com.google.common.collect.Collections2;
 
 import com.splicemachine.access.api.PartitionAdmin;
 import com.splicemachine.access.api.PartitionCreator;
@@ -148,6 +149,7 @@ public class HBasePartitionAdmin implements PartitionAdmin{
         }
     }
 
+    @SuppressFBWarnings(value="DE_MIGHT_IGNORE", justification="Intentional")
     private void retriableSplit(TableName tableInfo, byte[] splitPoint) throws IOException, SQLException{
 
         List<HRegionInfo> regions = admin.getTableRegions(tableInfo);
@@ -317,7 +319,8 @@ public class HBasePartitionAdmin implements PartitionAdmin{
 
     @Override
     public void move(String partition, String server) throws IOException {
-        admin.move(partition.getBytes(), server!=null && !server.isEmpty() ?server.getBytes():null);
+        String cn = Charset.defaultCharset().name();
+        admin.move(partition.getBytes(cn), server!=null && !server.isEmpty() ?server.getBytes(cn):null);
     }
 
     @Override
@@ -467,11 +470,10 @@ public class HBasePartitionAdmin implements PartitionAdmin{
                         return results;
                     }
                 case "descriptor":
-//                    TODO try (Table table = admin.getConnection().getTable(TableName.valueOf(tableName))) {
-//                        HTableDescriptor descriptor = table.getTableDescriptor();
-//                        return Arrays.asList(descriptor.convert().toByteArray());
-//                    }
-                    return Collections.emptyList();
+                    try (Table table = admin.getConnection().getTable(TableName.valueOf(tableName))) {
+                        org.apache.hadoop.hbase.client.TableDescriptor descriptor = table.getDescriptor();
+                        return Arrays.asList(ProtobufUtil.toTableSchema(descriptor).toByteArray());
+                    }
                 case "grant":
                     String userName = Bytes.toString(bytes);
                     String spliceNamespace = SIDriver.driver().getConfiguration().getNamespace();
@@ -482,13 +484,13 @@ public class HBasePartitionAdmin implements PartitionAdmin{
                 case "grantCreatePrivilege": {
                     userName = Bytes.toString(bytes);
                     boolean granted = grantCreatePrivilege(tableName, userName);
-                    return Arrays.asList(new Boolean(granted).toString().getBytes());
+                    return Arrays.asList(Boolean.valueOf(granted).toString().getBytes(Charset.defaultCharset().name()));
                 }
 
                 case "revokeCreatePrivilege": {
                     userName = Bytes.toString(bytes);
                     boolean granted = revokeCreatePrivilege(tableName, userName);
-                    return Arrays.asList(new Boolean(granted).toString().getBytes());
+                    return Arrays.asList(Boolean.valueOf(granted).toString().getBytes(Charset.defaultCharset().name()));
                 }
                 default:
                     throw new UnsupportedOperationException(operation);
@@ -593,6 +595,48 @@ public class HBasePartitionAdmin implements PartitionAdmin{
         return false;
     }
 
+    @Override
+    public void setCatalogVersion(long conglomerateNumber, String version) throws IOException {
+
+        TableName tn = tableInfoFactory.getTableInfo(Long.toString(conglomerateNumber));
+        try {
+            org.apache.hadoop.hbase.client.TableDescriptor td = admin.getDescriptor(tn);
+            ((TableDescriptorBuilder.ModifyableTableDescriptor) td).setValue(SIConstants.CATALOG_VERSION_ATTR, version);
+            boolean tableEnabled = admin.isTableEnabled(tn);
+            if (tableEnabled) {
+                admin.disableTable(tn);
+            }
+            admin.modifyTable(td);
+        }
+        finally {
+            int wait = 0;
+            if (tn != null && !admin.isTableEnabled(tn)) {
+                admin.enableTable(tn);
+                while (wait < 2000 && !admin.isTableEnabled(tn)) {
+                    try {
+                        Thread.sleep(100);
+                        wait++;
+                    } catch (InterruptedException e) {
+                        throw new IOException(e);
+                    }
+                }
+            }
+            if (!admin.isTableEnabled(tn)) {
+                throw new IOException("Table " + tn.getNameAsString() + " is not enabled");
+            }
+        }
+    }
+
+    @Override
+    public String getCatalogVersion(long conglomerateNumber) throws StandardException {
+        try {
+            TableName tn = tableInfoFactory.getTableInfo(Long.toString(conglomerateNumber));
+            org.apache.hadoop.hbase.client.TableDescriptor td = admin.getDescriptor(tn);
+            return td.getValue(SIConstants.CATALOG_VERSION_ATTR);
+        }catch (Exception e) {
+            throw StandardException.plainWrapException(e);
+        }
+    }
     private boolean grantCreatePrivilege(String tableName, String userName) throws Throwable{
 
         if (hasCreatePrivilege(tableName, userName)){
